--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,26 @@
+version: "3.8"
 services:
+  app:
+    build:
+      context: .
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=mysql+mysqlconnector://root:root@db:3306/testdb
+    volumes:
+      - .:/app
   db:
     image: mysql:8.0
-    container_name: mysql_db
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: myapp
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: testdb
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+
 volumes:
   db_data:
